# binsai.py

./: $null  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  ws_smoke.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/mvp1_hungry/: README.md  hungry_agents_demo.py  hungry_office_demo.py  hungry_office_web.py  requirements.txt
src/binsai/: __init__.py  acl.py  actions.py  agent.py  cli.py  clock.py  drives.py  fuzzy.py  lifecycle.py  sleep.py  symbolic.py
src/binsai/simulation/: __init__.py
src/binsai/web/: server.py
src/binsai/world/: __init__.py  dummy_human.py  world.py
tests/: test_binsai_core.py  test_drive_metabolic.py  test_dummy_human.py  test_fuzzy.py  test_lifecycle.py  test_sleep.py  test_state_injection_llm.py  test_world.py
